src/test/resources/cocos/valid/imports/visibilityOfSymbols/Vehicles.sysml
package Vehicles{
	package Automobile{
		package ModellY{
			import 'Symbol Definition'::*;
		}
	}
}