src/test/resources/cocos/invalid/imports/AmbiguousImport/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'Symbol Definition'::Vehicle;
  block AlreadyInScope;
}